tests/idris2/error/error009/Exists.idr
import DoesntExist

foo : Int
foo = 94
